[JSC] It should be possible create a label named let when parsing Statement in non strict mode https://bugs.webkit.org/show_bug.cgi?id=168684

Patch by Caio Lima <ticaiolima@gmail.com> on 2017-03-13
Reviewed by Saam Barati.

JSTests:

* ChakraCore/test/LetConst/DeclOutofBlock.baseline-jsc:

Source/JavaScriptCore:

This patch is fixing a Parser bug to allow define a label named
```let``` in sloppy mode when parsing a Statement.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseStatement):

LayoutTests:

* js/let-syntax-expected.txt:
* js/script-tests/let-syntax.js:
(shouldNotHaveSyntaxErrorSloopyOnly):

Canonical link: https://commits.webkit.org/186549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213850 268f45cc-cd09-0410-ab3c-d52691b4dbfc